fix: improve styles for landscape orientation on mobile devices

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -278,7 +278,7 @@ img {
 }
 .block-one{
     width: 47vw;
-    height: 47.5%;
+    height: 47.7%;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
@@ -295,7 +295,7 @@ img {
 
 .block-two{
     position: relative;
-    width: 49vw;
+    width: 51vw;
     height: 355px;
     background-repeat: no-repeat;
     background-size: cover;
